--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
+src/debian/initramfs-extract
+src/debian/.debhelper
+src/debian/*.debhelper.log
+src/debian/*.substvars
+src/debian/files
+src/debian/debhelper-build-stamp
+
+
+*.deb
+*.build
+*.buildinfo
+*.changes
+*.dsc
+*.tar.gz
+*.tar.xz
